--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -26,7 +26,7 @@
         padding: 0 5rem;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         height: 100%;
         justify-content: flex-start;
         width: 100%;
@@ -66,7 +66,7 @@
         position: absolute;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         font-size: 3rem;
         margin-bottom: 2rem;
         text-align: center;
@@ -83,7 +83,7 @@
     line-height: 2.5rem;
     text-align: left;
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         font-size: 1.2rem;
     }
 }
@@ -96,7 +96,7 @@
     margin-top: 3rem;
     width: 100%;
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         display: flex;
         flex-direction: column;
     }
@@ -140,7 +140,7 @@
         position: relative;
         width: 100%;
 
-        @media (max-width: $mobile) {
+        @media (max-width: $mobile-lg) {
             font-size: 1.2rem;
             padding: 1rem;
         }
@@ -166,7 +166,7 @@
         width: 100%;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         &:not(:first-child) {
             margin-top: 1rem;
         }
