--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -31,7 +31,7 @@
         z-index: 10;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         &::before {
             display: none;
         }
