--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -22,7 +22,7 @@
     padding: 0 5rem;
     width: 90%;
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         flex-direction: column-reverse;
         margin-right: initial;
         padding: 0;
@@ -44,7 +44,7 @@
         width: 40%;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         height: 50%;
         margin-left: initial;
         width: 100%;
@@ -91,7 +91,7 @@
         position: absolute;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         font-size: 4rem;
         margin: 2rem 0;
         position: relative;
@@ -114,7 +114,7 @@
     text-indent: 3rem;
     z-index: 1;
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         font-size: 1.2rem;
         line-height: initial;
         text-align: center;
