--- a/src/components/slider/dots/dots.scss
+++ b/src/components/slider/dots/dots.scss
@@ -4,7 +4,7 @@
     display: flex;
     margin-top: 5rem;
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         margin-top: 6rem;
     }
 }
@@ -24,7 +24,7 @@
         margin-left: 0.8rem;
     }
 
-    @media (max-width: $mobile) {
+    @media (max-width: $mobile-lg) {
         height: 0.3rem;
         width: 1.5rem;
     }
