progress: edit slide descriptions

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -208,7 +208,7 @@
 
 .typed-cursor {
     animation: typed-js-blink 0.7s infinite;
-    color: white;
+    color: $teal;
     font-size: 6rem;
     opacity: 1;
     position: absolute;
