--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -237,7 +237,7 @@
     }
 
     &:not(:first-child) {
-        margin-right: 1rem;
+        margin-left: 1rem;
     }
 
     @media (max-width: $mobile-lg) {
