refactor: fully rotating slides yayuuh

--- a/src/components/slider/dots/dots.scss
+++ b/src/components/slider/dots/dots.scss
@@ -2,10 +2,11 @@
 
 .dot-list {
     display: flex;
-    margin-top: 5rem;
+    margin-top: 2rem;
+    position: relative;
 
     @media (max-width: $mobile-lg) {
-        margin-top: 6rem;
+        margin-top: 0;
     }
 }
 
