--- a/src/components/slider/timer/timer.scss
+++ b/src/components/slider/timer/timer.scss
@@ -1,50 +1,65 @@
 @import '../../../globals';
 
 .timer {
-    margin: 2rem 0 8rem;
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
     position: relative;
 }
 
-.timer__bg {
-    background: $teal;
-    border-radius: 50%;
-    content: '';
-    height: 2.5rem;
-    opacity: 0.2;
-    width: 2.5rem;
-
-    @media (max-width: $mobile-lg) {
-        height: 1.5rem;
-        width: 1.5rem;
-    }
-}
-
 .timer__clock {
+    align-items: center;
     border: 1rem solid transparent;
     border-radius: 50%;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    height: 2rem;
+    justify-content: center;
+    position: relative;
+    width: 2rem;
     z-index: 10;
 
-    &.bottom-active {
+    &::before {
+        background: $teal;
+        border: 1rem solid transparent;
+        border-radius: 50%;
+        content: '';
+        height: 2.5rem;
+        opacity: 0.2;
+        position: absolute;
+        width: 2.5rem;
+        z-index: 0;
+
+        @media (max-width: $mobile-lg) {
+            height: 1.5rem;
+            width: 1.5rem;
+        }
+    }
+
+    &::after {
+        border: 1rem solid transparent;
+        border-radius: 50%;
+        content: '';
+        position: relative;
+        z-index: 0;
+
+        @media (max-width: $mobile-lg) {
+            border-width: 0.75rem;
+        }
+    }
+
+    &.bottom-active::after {
         border-bottom-color: $teal;
     }
 
-    &.top-active {
+    &.top-active::after {
         border-top-color: $teal;
     }
 
-    &.left-active {
+    &.left-active::after {
         border-left-color: $teal;
     }
 
-    &.right-active {
+    &.right-active::after {
         border-right-color: $teal;
-    }
-
-    @media (max-width: $mobile-lg) {
-        border-width: 0.5rem;
     }
 }
