--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -101,8 +101,16 @@ $card-count: 7;
     @media (max-width: $mobile-lg) {
         font-size: 1.5rem;
         height: 3rem;
-        top: 35rem;
+        top: 30rem;
         width: 3rem;
+
+        &--prev {
+            transform: translate(calc(-50% - 5rem), -50%);
+        }
+
+        &--next {
+            transform: translate(calc(-50% + 5rem), -50%);
+        }
     }
 }
 
