--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,21 +4,20 @@
   position: relative;
 
   &::before {
-    @include fade-in(7s);
+    @include fade-out(7s);
 
     color: $charcoal;
     content: '<body>';
     font-family: 'La Belle Aurore', cursive;
     font-size: 2rem;
     left: 4rem;
-    opacity: 0;
     position: fixed;
     top: 3.5rem;
     z-index: 10;
   }
 
   &::after {
-    @include fade-in(7s);
+    @include fade-out(7s);
 
     bottom: 3.5rem;
     color: $charcoal;
@@ -26,7 +25,6 @@
     font-family: 'La Belle Aurore', cursive;
     font-size: 2rem;
     left: 4rem;
-    opacity: 0;
     position: fixed;
     z-index: 10;
   }
